# zark-core

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  zark-core-new.bat
.cargo/: config.toml
build-sys/: build.rs  post_build.rs
config/: config.json
crates/chaos_engineering/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/messaging/: messenger.rs  mod.rs
crates/common/src/messenger/: domain.rs  ffi.rs  mod.rs  repository.rs  use_cases.rs
crates/common/src/utils/: mod.rs  serialization.rs  uid.rs
crates/config_manager/: Cargo.toml
crates/config_manager/src/: config.rs  error.rs  lib.rs  updater.rs  watcher.rs
crates/distributed_system/: Cargo.toml
crates/distributed_system/src/: consensus.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: compiler.rs  error.rs  lib.rs  parser.rs
crates/event_sourcing/: Cargo.toml
crates/event_sourcing/src/: error.rs  event_replay.rs  event_store.rs  lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: error.rs  lib.rs  logger.rs
crates/metrics/: Cargo.toml
crates/module_manager/: Cargo.toml
crates/module_manager/src/: error.rs  lib.rs  loader.rs  module.rs  supervisor.rs
crates/plugin_system/: Cargo.toml
crates/plugin_system/src/: error.rs  lib.rs  loader.rs  manager.rs  plugin.rs
crates/reputation_system/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/self_healing/: Cargo.toml
data/rules/: zark_waf_basic_rules.xml
docs/: module-development.md
modules/adaptive_rate_limiter_module/: Cargo.toml
modules/adaptive_rate_limiter_module/src/: dynamic_limiter.rs
modules/chaos_engineering_module/: Cargo.toml
modules/dsl_module/: Cargo.toml
modules/dsl_module/src/: ast.rs  compiler.rs  parser.rs
modules/logger/: Cargo.toml
modules/logger/src/: lib.rs  logger.rs
modules/logger_module/: Cargo.toml
modules/logger_module/src/: logger.rs
modules/messenger_module/: Cargo.toml
modules/messenger_module/src/: lib.rs
modules/metrics_module/: Cargo.toml
modules/ml_module/: Cargo.toml
modules/reputation_system_module/src/: lib.rs
src/: constants.rs  main.rs
src/core/: config.rs  error.rs  mod.rs  module_interface.rs  state.rs
