[package]
name = "zark_waf_common"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "Common library for ZARK-WAF"
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-core"

[lib]
name = "zark_waf_common"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crossbeam-channel = "0.5"
thiserror = "1.0"


