[package]
name = "zark_waf_dsl"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "XML-based Domain-Specific Language for ZARK-WAF"
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-core"

[dependencies]
quick-xml = { version = "0.23", features = ["serialize"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]