[package]
name = "zark_waf_module_manager"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "Module manager for ZARK-WAF"
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zark_waf_common = { path = "../common" }
zark_waf_plugin_system = { path = "../plugin_system" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dashmap = "5.1"
libloading = "0.7"