[package]
name = "zark_waf_plugin_system"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "Plugin system for ZARK-WAF"
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-core"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
serde_json = "1.0"
libloading = "0.7"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
zark_waf_common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }


