[package]
name = "zark_waf_plugin_system"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "Plugin system for ZARK-WAF"
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zark_waf_common = { path = "../common" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.7"
dashmap = "5.1"

[dev-dependencies]
tokio-test = "0.4"