[package]
name = "zark_waf_adaptive_rate_limiter"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "Adaptive rate limiter for ZARK-WAF"
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-core"

[lib]
crate-type = ["cdylib"]

[dependencies]
zark_waf_common = { path = "../common" }
