[package]
name = "zark_waf_chaos_engineering"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "Chaos engineering ZARK-WAF"
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-core"

[lib]
crate-type = ["cdylib"]

[dependencies]
zark_waf_common = { path = "../common" }
